@@ -1,3 +1,5 @@
+* Create a zip entry for each subdivision found
+
 Version 5.4.0 - 2019-11-04
 * Bug fixes (see mercurial logs for details)
 * Replace XML data by import script
